# TURBINE

./: .gitignore  Cargo.toml  LICENSE  README.md  transactions.jsonl  turbine.toml
crates/turbine-ai/: Cargo.toml
crates/turbine-ai/src/: analyst.rs  contract.rs  engine.rs  governor.rs  idempotency.rs  lib.rs  normalize.rs
crates/turbine-cli/: Cargo.toml
crates/turbine-cli/src/: daemon.rs  main.rs
crates/turbine-core/: Cargo.toml
crates/turbine-core/src/: ai.rs  blockhash.rs  config.rs  contention.rs  ema.rs  error.rs  events.rs  leader.rs  lib.rs  tips.rs  transaction_record.rs  types.rs
crates/turbine-execute/: Cargo.toml  build.rs
crates/turbine-execute/src/: compiler.rs  compute.rs  coordinator.rs  diagnostics.rs  fee.rs  gate.rs  leader.rs  lib.rs  outcomes.rs  scenarios.rs  schedule.rs  searcher.rs  simulate.rs  submit.rs  tx.rs
crates/turbine-ingest/: Cargo.toml
crates/turbine-ingest/src/: blockhash.rs  boot.rs  client.rs  deshred.rs  feed_control.rs  geyser.rs  lib.rs  messages.rs  tips.rs
crates/turbine-ipc/: Cargo.toml
crates/turbine-ipc/src/: client.rs  frame.rs  lib.rs  proto.rs  server.rs
crates/turbine-process/: Cargo.toml
crates/turbine-process/src/: extract.rs  lib.rs  tips.rs
crates/turbine-state/: Cargo.toml
crates/turbine-state/src/: contention.rs  jito_poll_audit.rs  lib.rs  lifecycle.rs  transaction_audit.rs
crates/turbine-tui/: Cargo.toml
crates/turbine-tui/src/: app.rs  feed.rs  lib.rs  theme.rs  ui.rs
crates/turbine-web/: Cargo.toml
crates/turbine-web/src/: index.html  lib.rs
