[package]
name = "turbine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, config, errors, and telemetry events for TURBINE"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
solana-pubkey = { workspace = true }
